--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
 
           <h1 id="hero-heading" class="hero-title">這裡是 Hero 區主視覺占位內容</h1>
           <p class="hero-text">
-            此區為網站進入點，未來將放上個人一句話自我介紹、角色職稱（例如 Frontend Developer）、主要行動呼籲（例如瀏覽作品集、下載履歷）。
+            此區為網站進入點，未來將放上Hugo一句話自介、角色職稱（例如 Frontend Developer）、主要行動呼籲（例如瀏覽作品集、下載履歷）。
           </p>
           <p class="hero-text">
-            之後會用 Section SDD 的 Prompt 產生正式文案與版面，再把整個 section 貼回來取代這一區。
+            之後會用 Section SDD 的 Prompt 產生正式文案與版面，再把整個 section 貼回取代這一區。
           </p>
 
         </div>
