feat：修改文字內容

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             此區為網站進入點，未來將放上Hugo一句話自介、角色職稱（例如 Frontend Developer）、主要行動呼籲（例如瀏覽作品集、下載履歷）。
           </p>
           <p class="hero-text">
-            之後會用 Section SDD 的 Prompt 產生正式文案與版面，再把整個 section 貼回取代這一區。
+            之後會用 Section SDD 的 Prompt 產生正式文案與版面，再把整個 section 貼回取代這區。
           </p>
 
         </div>
