--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hugo · Pied Piper of Hamelin｜Practive Archive</title>
-  <meta name="description" content="這是一個展示個人背景、技能、作品集與聯絡方式的專業個人品牌網站，提供清楚的自我介紹與作品呈現，協助訪客快速了解我的能力與特色。">
+  <meta name="description" content="這是展示個人背景、技能、作品集與聯絡方式的專業個人品牌網站，提供清楚的自我介紹與作品呈現，協助訪客快速了解我的能力與特色。">
 
   <style>
     /* ---------------------------------------------------------
